--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,16 @@
+Wed Apr 12 02:35:47 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: added a rule "refresh-Makefile.plugins:" to rebuild the
+	Makefile.plugins manually, without listplugins.sh. removed cruft about
+	generted enum headers for C plugins. build plugins twice now, once in
+	an ordinary "+PLAIN" version, and once with SSE_FLAGS as "+SSE". the
+	sse variant is built conditionally. install plugins in "plugins+PLAIN/"
+	and "plugins+SSE/" directories. lots of cleanups in the generation rules.
+
+	* listplugins.sh: removed, generation logic was moved into Makefile.am.
+
+	* Makefile.plugins: manual update.
+
 Sat Apr  1 16:59:52 2006  Tim Janik  <timj@gtk.org>
 
 	* freeverb/denormals.h (undenormalise): fix macro name.
