--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 16 17:43:23 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: fixup distuninstallcheck:-rule which reports 
+	not uninstalled files created by update-mime-database(1).
+
 Sat Apr 15 03:08:47 2006  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstmain.c: document --bse-force-fpu and print processor
