--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 16 18:35:12 2006  Tim Janik  <timj@gtk.org>
+
+	* library/instruments/bqs-moog-saw-bass.bse: added new bass instrument
+	from Stefan Westerfeld.
+
 Sun Apr 16 18:31:05 2006  Tim Janik  <timj@gtk.org>
 
 	* library/instruments/Makefile.am: 
