--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-19  Daniel Nylander  <po@danielnylander.se>
+
+        * sv.po: Updated Swedish translation.
+	
 Tue Apr 11 23:39:51 2006  Tim Janik  <timj@gtk.org>
 
 	* LINGUAS: define supported languages.
