--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+Thu Apr 20 20:22:19 2006  Tim Janik  <timj@gtk.org>
+
+	* it.po: updated translation from Michele Petrecca <michelinux@alice.it>.
+
+	* sv.po: restored missing *.scm entries.
+
 2006-04-19  Daniel Nylander  <po@danielnylander.se>
 
         * sv.po: Updated Swedish translation.
