--- a/TODO
+++ b/TODO
@@ -73,6 +73,10 @@ BUGS(FIXME):
 - registering the same script function twice triggers GType assertion
 - sfidl --client: should generate: extern "C" ifdef's, include sfi/sfi.h
 TODO:
+- move "ratio" above "trheshodl" in artscompressor (order in property dialog)
+- fix missing "Dry" for chorus (or label "Wet" differently)
+- property dialogs should support Ctrl+Z i.e. undo/redo
+- add undo grouping around note selection movement
 - add shift-up/shift-down buttons to piano roll to pitch up/dopwn the selected notes
 - add a "Creating Skins" section to the beast manual page
 - implement window position and size save/restore
@@ -371,6 +375,7 @@ TASKS:
   C-2  | Foo   | FooMetallic
   D-2  | Foo   | FooWooden
   E-2  | Bazzo | Default
+  * note mapping link: http://arts-project.org/doc/handbook/mapped-instruments.html
 - Project/Song: move project+song properties into an extra File->Properties dialog
 - PianoRoll: allow editing parts from multiple tracks in a single window (syncronizing horizontal scroll position)
 - support sequencer input from and to ALSA and JACK
