--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,9 @@
+Mon Apr 24 21:38:55 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* birnettests.h (TEST_CALIBRATION): Ensure that TEST_CALIBRATION
+	returns at least 1. Before this change, a return value of 0 would be
+	possible for very slow test code.
+
 Mon Apr 24 19:26:04 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetthread.c (get_pth_thread_table): use fputs() to print messages 
